base price alignment fixed

--- a/src/components/moduler/playerDetails/PlayerDetails.css
+++ b/src/components/moduler/playerDetails/PlayerDetails.css
@@ -109,7 +109,7 @@
 .player-stats p {
   font-size: 23px;
   margin: 10px 0;
-  width: 90%;
+  width: 100%;
   text-align: end;
 }
 
